--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>Hello, Yanie</h1>
+<head>
+  <title>This is the title</title>
+</head>
+<body>
+  <h1>Heading level 1</h1>
+  <h2>Heading level 2</h2>
+  <h3>Heading level 3</h3>
+  <h4>Heading level 4</h4>
+  <h5>Heading level 5</h5>
+  <h6>Heading level 6</h6>
+  <p>Paragraph 1. <b>Lorem ipsum dolor sit.</b> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error temporibus nesciunt quod, ipsa asperiores consequuntur, praesentium quasi ratione nihil est voluptatum in vero dolores atque similique explicabo corrupti, nostrum repudiandae.
+  </p>
+  <p>Paragraph 2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores (break here)<br>laborum earum deleniti voluptatum repudiandae, ducimus aut cupiditate reiciendis commodi perspiciatis ea dignissimos nemo veniam molestias praesentium maiores obcaecati vitae excepturi!
+  </p>
+  <a href="https://www.wikipedia.org/">A link to Wikipedia!</a>
+  <input type="text"> <!-- This is for text input -->
+  <input type="file"> <!-- This is for uploading files -->
+  <input type="checkbox"> <!-- This is for checkboxes -->
+</body>
