--- a/index.html
+++ b/index.html
@@ -16,4 +16,11 @@
   <input type="text"> <!-- This is for text input -->
   <input type="file"> <!-- This is for uploading files -->
   <input type="checkbox"> <!-- This is for checkboxes -->
+  <p>Oh well, <span lang="fr">c'est la vie</span>, as they say in France.</p>
+  <p>This is <span style="color: red; font-weight: bold;">important</span> text.</p>
+  <p>The price is: <span id="price">$5000</span></p>
+  <script>
+    //document.getElementById("price").innerText = "$45"; // Updates the price dynamically
+  </script>
+
 </body>
