--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
   <script>
     //document.getElementById("price").innerText = "$45"; // Updates the price dynamically
   </script>
+  <p>New line here (remote commit)</p>
 
 </body>
