--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <title>This is the title</title>
 </head>
 <body>
+  <p>New line here (local commit)</p>
   <h1>Heading level 1</h1>
   <h2>Heading level 2</h2>
   <h3>Heading level 3</h3>
