--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   <script>
     //document.getElementById("price").innerText = "$45"; // Updates the price dynamically
   </script>
-  <p>New line here (remote commit)</p>
+  <p>New line here (another remote commit)</p>
 
 </body>
