Update header and elements

--- a/test.html
+++ b/test.html
@@ -3,14 +3,10 @@
 <html lang="en"> 
   <header>
     <title>
-      website
+      Title
     </title>
   </header>
   <body>
-    <p><em>Watch</em> this <strong>space</strong></p>
+    Body
   </body>
 </html>
-
-
-
-
