Correct error (header -> head)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
 <html lang="en"> 
-  <header>
+  <head>
     <title>
       website
     </title>
-  </header>
+  </head>
   <body>
     <p><em>Watch</em> this <strong>space</strong></p>
   </body>
