--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 
 <html lang="en"> 
   <head>
-    <title>
-      website
-    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>website</title>
   </head>
   <body>
-    <p><em>Watch</em> this <strong>space</strong></p>
+    <p>
+      <em>Watch</em> this <strong>space</strong>
+    </p>
   </body>
 </html>
 
