--- a/first-website/index.html
+++ b/first-website/index.html
@@ -2,6 +2,10 @@
 <html lang="en-US">
   <head>
     <link href="styles/style.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>My test page</title>
