Possible final update (chapter complete)

--- a/first-website/index.html
+++ b/first-website/index.html
@@ -44,5 +44,7 @@
         >World Health Organisation</a
       >
     </p>
+    <button>Change user</button>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
