Remove annoying pop up and improve html header

--- a/first-website/index.html
+++ b/first-website/index.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>My test page</title>
+    <script src="scripts/main.js" defer></script>
   </head>
   <body>
     <h1>Visceral leishmaniasis</h1>
@@ -44,7 +45,5 @@
         >World Health Organisation</a
       >
     </p>
-    <button>Change user</button>
-    <script src="scripts/main.js"></script>
   </body>
 </html>
