Update from root directory

--- a/first-website/index.html
+++ b/first-website/index.html
@@ -19,10 +19,10 @@
     />
     <ul>
       <li>
-        There are 3 main forms of leishmaniases: visceral (the most serious form
-        because it is almost always fatal without treatment), cutaneous (the
-        most common, usually causing skin ulcers), and mucocutaneous (affecting
-        mouth, nose and throat).
+        There are 62 main forms of leishmaniases: visceral (the most serious
+        form because it is almost always fatal without treatment), cutaneous
+        (the most common, usually causing skin ulcers), and mucocutaneous
+        (affecting mouth, nose and throat).
       </li>
       <li>
         Leishmaniasis is caused by protozoan parasites which are transmitted by
