--- a/html/index.html
+++ b/html/index.html
@@ -28,6 +28,18 @@
   </head>
   <body>
     <h1>Visceral leishmaniasis: prospective clinical studies</h1>
+
+    <p>Here is a blockquote:</p>
+    <blockquote
+      cite="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/blockquote"
+    >
+      <p>
+        The <strong>HTML <code>&lt;blockquote&gt;</code> Element</strong> (or
+        <em>HTML Block Quotation Element</em>) indicates that the enclosed text
+        is an extended quotation.
+      </p>
+    </blockquote>
+
     <p>
       This dashboard uses data collected from a
       <a
