Deploy /public folder to the model folder in my github pages jpwil/vl-model-website@71d391369110a1b53bf35a4ba55997a727a6f2d7

--- a/model/index.html
+++ b/model/index.html
@@ -42,6 +42,7 @@
         </section>
 
         <form id="risk-calculator-form" class="calculator-form">
+          <label class="radio-group-label">Sex</label>
           <div class="radio-group">
             <div class="radio-alignment">
               <input type="radio" id="male" name="sex" value="Male" required />
